# kaas

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.operator  Makefile  README.md  RELEASING.md  cargo-deny.toml  clippy.toml  go.mod  go.sum  kafbat-support-plan.md  phase-1.md  phase-2.md  phase1-breakdown.md  phase10-breakdown.md  phase2-breakdown.md  phase3-breakdown.md  phase4-breakdown.md  phase5-breakdown.md  phase6-breakdown.md  phase7-breakdown.md  phase8-breakdown.md  phase9-breakdown.md  rewrite.md  rust-toolchain.toml  rustfmt.toml  shared-storage-kafka-plan.md  skafka-plan-v3.md  v2-deferred.md
bins/kaas/: Cargo.toml  Dockerfile
bins/kaas-operator/: Cargo.toml  Dockerfile
bins/kaas-operator/src/: main.rs
bins/kaas/src/: cluster.rs  main.rs
bins/kaas/tests/: auth_smoke.rs  byte_opacity.rs  cluster_bringup.rs  cluster_smoke.rs  eos_v2.rs  smoke.rs
bins/skafka/: Cargo.toml  Dockerfile
bins/skafka-operator/: Cargo.toml  Dockerfile
bins/skafka-operator/src/: main.rs
bins/skafka/src/: cluster.rs  main.rs
bins/skafka/tests/: auth_smoke.rs  byte_opacity.rs  cluster_bringup.rs  cluster_smoke.rs  eos_v2.rs  smoke.rs
crates/kaas-broker/: Cargo.toml  build.rs
crates/kaas-broker/src/: acl_cr_writer.rs  assignment.rs  broker.rs  cli.rs  control_batch.rs  coordinator.rs  fence_watcher.rs  group_hash.rs  group_takeover.rs  heartbeat_client.rs  lib.rs  marker_watcher.rs  producer_id.rs  self_fence.rs  takeover.rs  topic_config_defaults.rs  topic_cr_writer.rs  topic_registry.rs
crates/kaas-broker/src/handlers/: acls.rs  add_offsets_to_txn.rs  add_partitions_to_txn.rs  alter_client_quotas.rs  alter_replica_log_dirs.rs  api_versions.rs  create_partitions.rs  create_topics.rs  delete_groups.rs  delete_records.rs  delete_topics.rs  describe_client_quotas.rs  describe_configs.rs  describe_groups.rs  describe_log_dirs.rs  end_txn.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  incremental_alter_configs.rs  init_producer_id.rs  join_group.rs  leave_group.rs  list_groups.rs  list_offsets.rs  metadata.rs  mod.rs  offset_commit.rs  offset_delete.rs  offset_fetch.rs  produce.rs  sasl.rs  sync_group.rs  txn_offset_commit.rs  write_txn_markers.rs
crates/kaas-broker/tests/: fence_broadcast.rs  group_dispatch.rs  marker_broadcast.rs  proto_smoke.rs
crates/kaas-codec/: Cargo.toml
crates/kaas-codec/src/: crc.rs  errors.rs  headers.rs  lib.rs  recordbatch_count.rs  tagged.rs  tripwires.rs
crates/kaas-codec/src/api/: acl_types.rs  add_partitions_to_txn.rs  alter_replica_log_dirs.rs  api_versions.rs  create_partitions.rs  create_topics.rs  delete_acls.rs  delete_groups.rs  describe_client_quotas.rs  describe_log_dirs.rs  end_txn.rs  fetch.rs  find_coordinator.rs  mod.rs  (+13 more)
crates/kaas-k8s/: Cargo.toml
crates/kaas-k8s/src/: endpoints.rs  identity.rs  kube_watchers.rs  lib.rs  readiness.rs  topic_watcher.rs
crates/kaas-operator-api/: Cargo.toml
crates/kaas-operator-api/src/: condition.rs  kafkacluster.rs  kafkaclusterassignments.rs  kafkatopic.rs  kafkauser.rs  lib.rs  scheme.rs
crates/kaas-operator-api/tests/: crd_smoke.rs
crates/kaas-protocol/: Cargo.toml
crates/kaas-protocol/src/: connstate.rs  dispatch.rs  frame.rs  lib.rs  server.rs
crates/kaas-storage/: Cargo.toml
crates/kaas-storage/src/: atomic_write.rs  cleaner.rs  disk.rs  engine.rs  errors.rs  fs.rs  idempotence.rs  lib.rs  manifest.rs  memory.rs  partition.rs  recovery_checkpoint.rs  segment.rs  topic_identity.rs
crates/sk-auth/: Cargo.toml
crates/sk-auth/src/: acls.rs  credentials.rs  engine.rs  errors.rs  lib.rs  mtls.rs  plain.rs  principal_mapping.rs  quota.rs  scram.rs  types.rs
crates/sk-broker/: Cargo.toml
crates/sk-broker/src/: acl_cr_writer.rs  assignment.rs  broker.rs  cli.rs  control_batch.rs  coordinator.rs  fence_watcher.rs  group_hash.rs  group_takeover.rs  heartbeat_client.rs  lib.rs  local_lease.rs  marker_watcher.rs  self_fence.rs  takeover.rs  topic_config_defaults.rs  topic_cr_writer.rs  topic_registry.rs
crates/sk-broker/tests/: fence_broadcast.rs  group_dispatch.rs  marker_broadcast.rs  proto_smoke.rs
crates/sk-codec/: Cargo.toml
crates/sk-codec/src/: crc.rs  frame.rs  lib.rs  primitives.rs  tagged.rs  tripwires.rs
crates/sk-controller/: Cargo.toml
crates/sk-controller/src/: assignment_writer.rs  balancer.rs  election.rs  heartbeat_server.rs  k8s_mirror.rs  kube_election.rs  lib.rs
crates/sk-controller/tests/: controller_failover.rs  heartbeat_roundtrip.rs  stale_controller_race.rs
crates/sk-coordinator/: Cargo.toml
crates/sk-coordinator/src/: atomic_write.rs  errors.rs  fence_log.rs  group.rs  lib.rs  manager.rs  marker_queue.rs  offset_store.rs  txn_state.rs
crates/sk-coordinator/tests/: golden_fixtures.rs
crates/sk-k8s/: Cargo.toml
crates/sk-k8s/src/: endpoints.rs  identity.rs  kube_watchers.rs  lib.rs  readiness.rs  topic_watcher.rs
crates/sk-observability/: Cargo.toml
crates/sk-observability/src/: bootstrap.rs  byteopacity.rs  gauges.rs  health.rs  k8s_api.rs  lib.rs  metrics.rs  otlp_push_observer.rs  topic_traffic.rs  tracing.rs
crates/sk-observability/tests/: wire_up_audit.rs
crates/sk-operator-api/: Cargo.toml
crates/sk-operator-api/src/: condition.rs  kafkacluster.rs  kafkaclusterassignments.rs  kafkatopic.rs  kafkauser.rs  lib.rs  scheme.rs
crates/sk-operator-api/tests/: crd_smoke.rs
crates/sk-operator-controllers/: Cargo.toml
crates/sk-operator-controllers/src/: acls.rs  conditions.rs  credentials.rs  kafkacluster_controller.rs  kafkatopic_controller.rs  kafkauser_controller.rs  lib.rs  observer.rs  sweep.rs
crates/sk-protocol/: Cargo.toml
crates/sk-protocol/src/: connstate.rs  dispatch.rs  frame.rs  lib.rs  server.rs
crates/sk-storage/: Cargo.toml
crates/sk-storage/src/: atomic_write.rs  cleaner.rs  disk.rs  engine.rs  errors.rs  fs.rs  idempotence.rs  lib.rs  manifest.rs  memory.rs  partition.rs  producer_snapshot.rs  segment.rs  topicconfig.rs  txn_index.rs
crates/sk-test-harness/: Cargo.toml
crates/sk-test-harness/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: api_matrix.rs  main.rs
(+802 files in other folders)
