[workspace]
resolver = "2"
members = [
    "crates/kaas-codec",
    "crates/kaas-protocol",
    "crates/kaas-storage",
    "crates/kaas-coordinator",
    "crates/kaas-broker",
    "crates/kaas-controller",
    "crates/kaas-auth",
    "crates/kaas-k8s",
    "crates/kaas-observability",
    "crates/kaas-operator-api",
    "crates/kaas-operator-controllers",
    "crates/kaas-test-harness",
    "bins/kaas",
    "bins/kaas-operator",
    "xtask",
]

[workspace.package]
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/Woestebanaan/kaas"
rust-version = "1.85"

[workspace.dependencies]
# async + I/O
tokio          = { version = "1.43", features = ["full"] }
tokio-rustls   = "0.26"
tokio-util     = { version = "0.7", features = ["io", "codec", "rt"] }
bytes          = "1.9"
futures        = "0.3"
async-trait    = "0.1"
parking_lot    = "0.12"
dashmap        = "6.1"
arc-swap       = "1.7"
notify         = "7.0"

# wire / serde / encoding
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
prost          = "0.13"
tonic          = "0.12"
prost-build    = "0.13"
tonic-build    = "0.12"
protoc-bin-vendored = "3"
chrono         = { version = "0.4", default-features = false, features = ["std", "clock"] }
crc32c         = "0.6"
twox-hash      = { version = "2", default-features = false, features = ["xxhash64"] }
uuid           = { version = "1.11", features = ["v4", "serde"] }
base64         = "0.22"
hmac           = "0.12"
sha1           = "0.10"
sha2           = "0.10"
regex          = "1.11"
bytestring     = "1.4"

# error / tracing / metrics
thiserror      = "2.0"
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry         = "0.27"
opentelemetry-otlp    = { version = "0.27", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry_sdk     = { version = "0.27", features = ["rt-tokio"] }

# kubernetes
kube           = { version = "0.96", features = ["client", "derive", "runtime", "rustls-tls"] }
k8s-openapi    = { version = "0.23", features = ["latest"] }
schemars       = "0.8"

# TLS
rustls         = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rcgen          = "0.13"
x509-parser    = "0.16"

# crypto
rand           = "0.8"
subtle         = "2.6"
pbkdf2         = { version = "0.12", default-features = false, features = ["hmac"] }

# axum (healthz, metrics endpoints)
axum           = "0.7"

# dev-deps shared across crates
proptest       = "1.6"
insta          = { version = "1.41", features = ["json", "yaml"] }
tokio-test     = "0.4"
tempfile       = "3.14"
wiremock       = "0.6"

# internal crates referenced by path
kaas-codec                = { path = "crates/kaas-codec" }
kaas-protocol             = { path = "crates/kaas-protocol" }
kaas-storage              = { path = "crates/kaas-storage" }
kaas-coordinator          = { path = "crates/kaas-coordinator" }
kaas-broker               = { path = "crates/kaas-broker" }
kaas-controller           = { path = "crates/kaas-controller" }
kaas-auth                 = { path = "crates/kaas-auth" }
kaas-k8s                  = { path = "crates/kaas-k8s" }
kaas-observability        = { path = "crates/kaas-observability" }
kaas-operator-api         = { path = "crates/kaas-operator-api" }
kaas-operator-controllers = { path = "crates/kaas-operator-controllers" }
kaas-test-harness         = { path = "crates/kaas-test-harness" }

[workspace.lints.clippy]
unwrap_used              = "deny"
expect_used              = "deny"
panic                    = "deny"
as_conversions           = "deny"
cast_possible_truncation = "deny"
cast_sign_loss           = "deny"

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_debug_implementations = "warn"
