[package]
name         = "xtask"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Repo-wide chores: gen-proto, gen-crds, check-crd-drift, ci."

[dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
