[package]
name         = "kaas-operator"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "kaas Kubernetes operator binary."

[[bin]]
name = "kaas-operator"
path = "src/main.rs"

[dependencies]
anyhow                  = { workspace = true }
async-trait             = { workspace = true }
axum                    = { workspace = true }
futures                 = { workspace = true }
kube                    = { workspace = true }
rustls                  = { workspace = true }
kaas-controller           = { path = "../../crates/kaas-controller" }
kaas-observability        = { workspace = true }
kaas-operator-api         = { workspace = true }
kaas-operator-controllers = { workspace = true }
tokio                   = { workspace = true }
tokio-util              = { workspace = true }
tracing                 = { workspace = true }
tracing-subscriber      = { workspace = true }

[lints]
workspace = true
