[package]
name         = "skafka-operator"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "skafka Kubernetes operator binary."

[[bin]]
name = "skafka-operator"
path = "src/main.rs"

[dependencies]
anyhow                  = { workspace = true }
async-trait             = { workspace = true }
axum                    = { workspace = true }
futures                 = { workspace = true }
kube                    = { workspace = true }
sk-controller           = { path = "../../crates/sk-controller" }
sk-operator-api         = { workspace = true }
sk-operator-controllers = { workspace = true }
tokio                   = { workspace = true }
tokio-util              = { workspace = true }
tracing                 = { workspace = true }
tracing-subscriber      = { workspace = true }

[lints]
workspace = true
