[package]
name         = "kaas-codec"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Kafka wire frames, primitives, CRC32C, KIP-482 tagged fields."

[dependencies]
bytes      = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
crc32c     = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
