[package]
name         = "kaas-k8s"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Broker-side K8s helpers: BrokerRegistry, TopicWatcher, ReadinessUpdater."

[lints]
workspace = true

[dependencies]
async-trait    = { workspace = true }
chrono         = { workspace = true }
parking_lot    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
kaas-broker        = { path = "../kaas-broker" }
kaas-coordinator   = { path = "../kaas-coordinator" }
kaas-observability = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tokio-util     = { workspace = true }
tracing        = { workspace = true }

# kube wiring — feature-gated so a dev binary without kube creds
# still links. The trait surfaces ([`ReadinessGate`], etc.) ship
# unconditionally.
futures        = { workspace = true, optional = true }
k8s-openapi     = { workspace = true, optional = true }
kube            = { workspace = true, optional = true }
kaas-operator-api = { workspace = true, optional = true }

[features]
default = ["kube-watchers"]
# Pull in the kube-rs runtime + typed API impls. The workspace
# pins `home@0.5.11` (compatible with rustc 1.85; later versions
# require 1.88) so the feature can land in the default set.
kube-watchers = ["dep:futures", "dep:k8s-openapi", "dep:kube", "dep:kaas-operator-api"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
