[package]
name         = "kaas-operator-api"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "CRD types (kube-derive): KafkaCluster, KafkaTopic, KafkaUser, KafkaClusterAssignments."

[dependencies]
kube        = { workspace = true }
k8s-openapi = { workspace = true }
schemars    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]
serde_yaml = "0.9"

[lints]
workspace = true
