[package]
name         = "kaas-protocol"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Per-API request/response types, dispatch, multi-listener server bring-up."

[dependencies]
async-trait = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
parking_lot  = { workspace = true }
kaas-auth          = { path = "../kaas-auth" }
kaas-codec         = { path = "../kaas-codec" }
kaas-observability = { workspace = true }
kaas-storage       = { path = "../kaas-storage" }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tokio-test   = { workspace = true }

[lints]
workspace = true
