[package]
name         = "kaas-storage"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "DiskStorageEngine: segments, manifest, idempotence, producer snapshot."

[dependencies]
async-trait  = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
dashmap          = { workspace = true }
parking_lot      = { workspace = true }
nix              = { workspace = true }
arc-swap         = { workspace = true }
kaas-observability = { workspace = true }

[dev-dependencies]
proptest     = { workspace = true }
tempfile     = { workspace = true }

[lints]
workspace = true
