[package]
name         = "sk-broker"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Broker glue: Coordinator (assignment.json watcher), takeover, heartbeat client."

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
