[package]
name         = "sk-broker"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Broker glue: Coordinator (assignment.json watcher), takeover, heartbeat client."

[dependencies]
async-trait = { workspace = true }
bytes       = { workspace = true }
parking_lot = { workspace = true }
prost       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sk-auth     = { path = "../sk-auth" }
sk-codec    = { path = "../sk-codec" }
sk-protocol = { path = "../sk-protocol" }
sk-storage  = { path = "../sk-storage" }
thiserror   = { workspace = true }
tonic       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
sk-auth = { path = "../sk-auth", features = ["test-helpers"] }
tokio   = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
