[package]
name         = "sk-broker"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Broker glue: Coordinator (assignment.json watcher), takeover, heartbeat client."

[dependencies]
anyhow         = { workspace = true }
arc-swap       = { workspace = true }
async-trait    = { workspace = true }
bytes          = { workspace = true }
chrono         = { workspace = true }
notify         = { workspace = true }
parking_lot    = { workspace = true }
prost          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
kube           = { workspace = true, optional = true }
sk-auth        = { path = "../sk-auth" }
sk-codec       = { path = "../sk-codec" }
sk-coordinator = { path = "../sk-coordinator" }
sk-operator-api = { path = "../sk-operator-api", optional = true }
sk-protocol    = { path = "../sk-protocol" }
sk-storage     = { path = "../sk-storage" }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = "0.1"
tokio-util     = { workspace = true }
tonic          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
sk-auth  = { path = "../sk-auth", features = ["test-helpers"] }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }

[features]
# `cr-writer` enables the kube-backed TopicCRWriter used by the
# Phase 7 admin handlers (CreatePartitions, IncrementalAlterConfigs).
# Off by default so the broker can be built without kube-rs in
# environments that don't need the K8s admin write path (the
# bins/skafka binary turns it on; tests don't).
default   = []
cr-writer = ["dep:kube", "dep:sk-operator-api"]

[lints]
workspace = true
