[package]
name         = "sk-codec"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Kafka wire frames, primitives, CRC32C, KIP-482 tagged fields."

[lints]
workspace = true
