[package]
name         = "sk-controller"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Controller-side: balancer, assignment writer, heartbeat server."

[lints]
workspace = true

[dependencies]
async-stream = "0.3"
async-trait  = { workspace = true }
chrono       = { workspace = true }
parking_lot  = { workspace = true }
prost        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sk-broker        = { path = "../sk-broker" }
sk-coordinator   = { path = "../sk-coordinator" }
sk-observability = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-stream = "0.1"
tokio-util   = { workspace = true }
tonic        = { workspace = true }
tracing      = { workspace = true }
twox-hash    = { workspace = true }

# kube-backed LeaseElection — optional behind the `kube-election`
# feature so a dev-mode build (LocalElection-only) doesn't link
# kube. Default-on now that `home@0.5.11` is pinned for rustc 1.85.
k8s-openapi    = { workspace = true, optional = true }
kube           = { workspace = true, optional = true }

[features]
default = ["kube-election"]
kube-election = ["dep:k8s-openapi", "dep:kube"]

[dev-dependencies]
parking_lot = { workspace = true }
tempfile    = { workspace = true }
tokio       = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tokio-util  = { workspace = true }
