[package]
name         = "sk-coordinator"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Consumer-group + transaction coordinator, offset store."

[lints]
workspace = true
