[package]
name         = "sk-coordinator"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Consumer-group + transaction coordinator, offset store."

[lints]
workspace = true

[dependencies]
arc-swap     = { workspace = true }
async-trait  = { workspace = true }
bytes        = { workspace = true }
dashmap      = { workspace = true }
parking_lot  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
tokio        = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
