[package]
name         = "sk-k8s"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Broker-side K8s helpers: BrokerRegistry, TopicWatcher, TopicCRWriter, ReadinessUpdater."

[lints]
workspace = true
