[package]
name         = "sk-observability"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "OTLP metrics + tracing, /healthz, tripwires."

[lints]
workspace = true

[dependencies]
tokio                 = { workspace = true }
tokio-util            = { workspace = true }
async-trait           = { workspace = true }
arc-swap              = { workspace = true }
dashmap               = { workspace = true }
parking_lot           = { workspace = true }
bytes                 = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
thiserror             = { workspace = true }
anyhow                = { workspace = true }
sk-codec              = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
opentelemetry_sdk     = { workspace = true }
axum                  = { workspace = true }
futures               = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile   = { workspace = true }
