[package]
name         = "sk-operator-api"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "CRD types (kube-derive): KafkaCluster, KafkaTopic, KafkaUser, KafkaClusterAssignments."

[lints]
workspace = true
