[package]
name         = "sk-operator-controllers"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Phase 7 operator: per-CRD reconcilers + shared helpers (credentials, ACLs, sweep)."

[dependencies]
# CRD types and shared scheme.
sk-operator-api = { workspace = true }

# Filesystem helpers (TopicConfigFile / atomic_write_json) live in sk-storage.
sk-storage      = { workspace = true }

# kube-rs surface (read CRs, atomic write JSON to PVC, etc.)
kube            = { workspace = true }
k8s-openapi     = { workspace = true }

# error / async / logging
async-trait     = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true }

# serde / JSON
serde           = { workspace = true }
serde_json      = { workspace = true }

# crypto for SCRAM derivation (computeScram port)
base64          = { workspace = true }
hmac            = { workspace = true }
sha2            = { workspace = true }
pbkdf2          = { workspace = true }
rand            = { workspace = true }
uuid            = { workspace = true }

# chrono for RFC3339 timestamps on Conditions.
chrono          = { workspace = true }

[dev-dependencies]
tempfile        = { workspace = true }
tokio-test      = { workspace = true }
regex           = { workspace = true }

[lints]
workspace = true
