[package]
name         = "sk-protocol"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Per-API request/response types, dispatch, multi-listener server bring-up."

[lints]
workspace = true
