[package]
name         = "sk-storage"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "DiskStorageEngine: segments, manifest, idempotence, producer snapshot."

[lints]
workspace = true
