[package]
name         = "sk-test-harness"
version      = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish      = false
description  = "Test helpers: franz-rs/rdkafka wrappers, byte-opacity tripwire, fixtures."

[lints]
workspace = true
